--- a/xrLUA/xrLUA.vcproj
+++ b/xrLUA/xrLUA.vcproj
@@ -47,7 +47,7 @@
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/$(TargetName).pdb"
 				SubSystem="2"
-				ImportLibrary=""
+				ImportLibrary="x:\xrLua.lib"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"/>
@@ -181,7 +181,7 @@
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				ImportLibrary=""
+				ImportLibrary="x:\xrLua.lib"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"/>
