--- a/xrLUA/LUA_TEST/LUA_TEST.vcproj
+++ b/xrLUA/LUA_TEST/LUA_TEST.vcproj
@@ -232,6 +232,12 @@
 			</File>
 			<File
 				RelativePath=".\broker_test.cpp">
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\client_id.h">
