--- a/xrCompress/xrCompress.vcproj
+++ b/xrCompress/xrCompress.vcproj
@@ -119,7 +119,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
 				AdditionalDependencies="odbc32.lib odbccp32.lib"
-				OutputFile="$(OutDir)\xrCompress.exe"
+				OutputFile="c:\t\xrCompress.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
 				GenerateDebugInformation="TRUE"
