--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -8959,6 +8959,12 @@
 					Name="TabControl"
 					Filter="">
 					<File
+						RelativePath=".\ui\UITabButton.cpp">
+					</File>
+					<File
+						RelativePath=".\ui\UITabButton.h">
+					</File>
+					<File
 						RelativePath=".\ui\UITabControl.cpp">
 					</File>
 					<File
