--- a/xrUpdate/xrUpdate.vcproj
+++ b/xrUpdate/xrUpdate.vcproj
@@ -168,6 +168,12 @@
 				RelativePath=".\FolderDialog.h">
 			</File>
 			<File
+				RelativePath=".\LogDlg.cpp">
+			</File>
+			<File
+				RelativePath=".\LogDlg.h">
+			</File>
+			<File
 				RelativePath=".\MainFrm.cpp">
 			</File>
 			<File
@@ -199,6 +205,9 @@
 			</File>
 			<File
 				RelativePath=".\stdafx.h">
+			</File>
+			<File
+				RelativePath=".\task_impl.cpp">
 			</File>
 			<File
 				RelativePath=".\upd_task.cpp">
