--- a/xrLC/xrDO_Light/xrDO_Light.vcproj
+++ b/xrLC/xrDO_Light/xrDO_Light.vcproj
@@ -54,8 +54,7 @@
 				ProgramDatabaseFile="x:\$(ProjectName).pdb"
 				GenerateMapFile="TRUE"
 				SubSystem="2"
-				LargeAddressAware="0"
-				TargetMachine="0"/>
+				LargeAddressAware="0"/>
 			<Tool
 				Name="VCMIDLTool"
 				PreprocessorDefinitions="_DEBUG"
@@ -127,8 +126,7 @@
 				ProgramDatabaseFile="x:\$(ProjectName).pdb"
 				GenerateMapFile="TRUE"
 				SubSystem="2"
-				LargeAddressAware="0"
-				TargetMachine="0"/>
+				LargeAddressAware="0"/>
 			<Tool
 				Name="VCMIDLTool"
 				PreprocessorDefinitions="NDEBUG"
@@ -172,12 +170,12 @@
 				GlobalOptimizations="TRUE"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="TRUE"
+				FavorSizeOrSpeed="1"
 				OmitFramePointers="FALSE"
 				EnableFiberSafeOptimizations="TRUE"
 				OptimizeForProcessor="3"
-				PreprocessorDefinitions="WIN32,NDEBUG,_WINDOWS,DEBUG,MIXED"
+				PreprocessorDefinitions="WIN32,NDEBUG,_WINDOWS"
 				StringPooling="TRUE"
-				ExceptionHandling="FALSE"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="FALSE"
 				EnableFunctionLevelLinking="FALSE"
@@ -209,10 +207,8 @@
 				GenerateMapFile="TRUE"
 				SubSystem="2"
 				LargeAddressAware="0"
-				TerminalServerAware="0"
 				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				TargetMachine="0"/>
+				EnableCOMDATFolding="2"/>
 			<Tool
 				Name="VCMIDLTool"
 				PreprocessorDefinitions="NDEBUG"
