--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -6457,6 +6457,36 @@
 								RelativePath=".\space_restrictor_inline.h">
 							</File>
 						</Filter>
+						<Filter
+							Name="ZoneVisual"
+							Filter="">
+							<File
+								RelativePath=".\ZoneVisual.cpp">
+							</File>
+							<File
+								RelativePath=".\ZoneVisual.h">
+							</File>
+						</Filter>
+						<Filter
+							Name="HairsZone"
+							Filter="">
+							<File
+								RelativePath=".\HairsZone.cpp">
+							</File>
+							<File
+								RelativePath=".\HairsZone.h">
+							</File>
+						</Filter>
+						<Filter
+							Name="AmebaZone"
+							Filter="">
+							<File
+								RelativePath=".\AmebaZone.cpp">
+							</File>
+							<File
+								RelativePath=".\AmebaZone.h">
+							</File>
+						</Filter>
 					</Filter>
 					<Filter
 						Name="_lamp"
