--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="xrstalker"
+	Name="xrStalker"
 	ProjectGUID="{90F938A1-176A-4379-A3D1-DD516E8A6DC1}"
 	SccProjectName="SAK"
 	SccAuxPath="SAK"
