--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -958,6 +958,9 @@
 				RelativePath=".\scripts\level_tasks.script">
 			</File>
 			<File
+				RelativePath=".\scripts\level_tips.script">
+			</File>
+			<File
 				RelativePath=".\scripts\lua_help.script">
 			</File>
 			<File
