--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -501,6 +501,9 @@
 					RelativePath=".\Config\ui\map_character.xml">
 				</File>
 				<File
+					RelativePath=".\motion_icon.xml">
+				</File>
+				<File
 					RelativePath=".\Config\ui\news.xml">
 				</File>
 				<File
