--- a/xrUpdate/xrUpdate.vcproj
+++ b/xrUpdate/xrUpdate.vcproj
@@ -82,6 +82,7 @@
 				MinimalRebuild="FALSE"
 				RuntimeLibrary="0"
 				TreatWChar_tAsBuiltInType="TRUE"
+				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="3"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="TRUE"
