--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -501,10 +501,10 @@
 					RelativePath=".\Config\ui\map_character.xml">
 				</File>
 				<File
-					RelativePath=".\motion_icon.xml">
+					RelativePath=".\Config\ui\motion_icon.xml">
 				</File>
 				<File
-					RelativePath=".\Config\ui\motion_icon.xml">
+					RelativePath=".\motion_icon.xml">
 				</File>
 				<File
 					RelativePath=".\Config\ui\news.xml">
@@ -1295,6 +1295,9 @@
 			</File>
 			<File
 				RelativePath=".\scripts\xr_kamp.script">
+			</File>
+			<File
+				RelativePath=".\scripts\xr_logic.script">
 			</File>
 			<File
 				RelativePath=".\scripts\xr_meet.script">
