--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -1228,6 +1228,9 @@
 				RelativePath=".\scripts\ui_options_game_tab.script">
 			</File>
 			<File
+				RelativePath=".\Scripts\ui_options_profiles_tab.script">
+			</File>
+			<File
 				RelativePath=".\scripts\ui_options_sound_tab.script">
 			</File>
 			<File
