--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -495,10 +495,10 @@
 					RelativePath=".\Config\ui\map_character.xml">
 				</File>
 				<File
-					RelativePath=".\Config\ui\motion_icon.xml">
+					RelativePath=".\motion_icon.xml">
 				</File>
 				<File
-					RelativePath=".\motion_icon.xml">
+					RelativePath=".\Config\ui\motion_icon.xml">
 				</File>
 				<File
 					RelativePath=".\Config\ui\news.xml">
@@ -1349,6 +1349,9 @@
 			</File>
 			<File
 				RelativePath=".\scripts\xr_reactions.script">
+			</File>
+			<File
+				RelativePath=".\scripts\xr_remark.script">
 			</File>
 			<File
 				RelativePath=".\scripts\xr_replics.script">
