--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -973,6 +973,19 @@
 						</File>
 					</Filter>
 					<Filter
+						Name="planner"
+						Filter="">
+						<File
+							RelativePath=".\object_handler_planner.cpp">
+						</File>
+						<File
+							RelativePath=".\object_handler_planner.h">
+						</File>
+						<File
+							RelativePath=".\object_handler_planner_inline.h">
+						</File>
+					</Filter>
+					<Filter
 						Name="properties"
 						Filter="">
 						<File
