--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -495,10 +495,10 @@
 					RelativePath=".\Config\ui\map_character.xml">
 				</File>
 				<File
-					RelativePath=".\motion_icon.xml">
+					RelativePath=".\Config\ui\motion_icon.xml">
 				</File>
 				<File
-					RelativePath=".\Config\ui\motion_icon.xml">
+					RelativePath=".\motion_icon.xml">
 				</File>
 				<File
 					RelativePath=".\Config\ui\news.xml">
@@ -1211,6 +1211,9 @@
 			</File>
 			<File
 				RelativePath=".\scripts\ui_main_menu.script">
+			</File>
+			<File
+				RelativePath=".\Scripts\ui_multiplayer_dialog.script">
 			</File>
 			<File
 				RelativePath=".\scripts\ui_new_game_dialog.script">
